Track which Event Source produced each event
